Add logo and favicon

--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -10,8 +10,8 @@ ng_controller: BaseController
 components:
 - component: nav
   logo:
-    url: 
-    alt:
+    url: /static/images/logo.png
+    alt: Logo
   links:
     - name: About
       url: /about
