--- a/content/pages/projects.yaml
+++ b/content/pages/projects.yaml
@@ -7,8 +7,8 @@ ng_controller: ProjectsController
 components:
 - component: nav
   logo:
-    url: 
-    alt:
+    url: /static/images/logo.png
+    alt: Logo
   links:
     - name: About
       url: /about
