Setup starter footer

--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -23,3 +23,15 @@ components:
       url: /contact
 - component: hero
 - component: footer
+  logo: 
+    url: /static/images/logo.png
+    alt: Logo
+  links:
+    - name: About
+      url: /about
+    - name: Projects
+      url: /projects
+    - name: Workflow
+      url: /workflow
+    - name: Contact
+      url: /contact
