--- a/content/pages/workflow.yaml
+++ b/content/pages/workflow.yaml
@@ -5,17 +5,4 @@ description: See how we get things done
 ng_controller: WorkflowController
 
 components:
-- component: nav
-  logo:
-    url: /static/images/logo.png
-    alt: Logo
-  links:
-    - name: About
-      url: /about
-    - name: Projects
-      url: /projects
-    - name: Workflow
-      url: /workflow
-    - name: Contact
-      url: /contact
-- component: footer
+- component: workflow
