--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -10,3 +10,24 @@ ng_controller: BaseController
 components:
 - component: hero
   header: Hero Header
+- component: about
+  title: About
+  staff:
+    - name: Angus MacDonald
+      position: CEO
+      about: Angus loves writing code and some other stuff too...
+      image:
+        url: https://via.placeholder.com/350x600
+        alt: Angus MacDonald
+    - name: Jonathan Loubert
+      position: Senior Developer
+      about: Jon loves writing code and some other stuff too...
+      image:
+        url: https://via.placeholder.com/350x600
+        alt: Jonathan Loubert
+    - name: Kaden Zipfel
+      position: Associate Developer
+      about: Kaden loves writing code and some other stuff too...
+      image:
+        url: https://via.placeholder.com/350x600
+        alt: Kaden Zipfel
