--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["./global/main.ts", "./components/**/*.ts"],
+  "include": ["./global/main.ts", "./components/**/*.ts", "particles.d.ts"],
   "compilerOptions": {
     "lib": ["es6", "dom"],
     "noImplicitAny": true,
