--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-exec": "^3.0.2",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.1",
+    "particles.js": "^2.0.0",
     "toolbox-v2": "git+https://github.com/angusm/toolbox-v2.git#ab64e15b1e99ec3edbffc0d7d835d1d6064ca021",
     "webpack": "4.20.2",
     "webpack-stream": "5.1.1"
