--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -10,6 +10,7 @@ ng_controller: BaseController
 components:
 - component: hero
   header: Hero Header
+- component: blocks
 - component: about
   title: About
   staff:
