Reuse nav.currentSection() for each section

--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -32,3 +32,6 @@ components:
       image:
         url: https://via.placeholder.com/350x600
         alt: Kaden Zipfel
+- component: projects
+- component: workflow
+- component: contact
