--- a/content/data/nav.yaml
+++ b/content/data/nav.yaml
@@ -6,8 +6,8 @@ links:
   - name: About
     url: /#about
   - name: Projects
-    url: /projects
+    url: /#projects
   - name: Workflow
-    url: /workflow
+    url: /#workflow
   - name: Contact
-    url: /contact
+    url: /#contact
