Set inview transitions for about section

--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -35,19 +35,19 @@ components:
       image:
         url: https://via.placeholder.com/350x600
         alt: Angus MacDonald
-      frameClass: profile__frame profile__frame--1
+      class: profile profile--1
     - name: Jonathan Loubert
       position: Senior Developer
       about: Jon loves writing code and some other stuff too...
       image:
         url: https://via.placeholder.com/350x600
         alt: Jonathan Loubert
-      frameClass: profile__frame profile__frame--2
+      class: profile profile--2
     - name: Kaden Zipfel
       position: Associate Developer
       about: Kaden loves writing code and some other stuff too...
       image:
         url: https://via.placeholder.com/350x600
         alt: Kaden Zipfel
-      frameClass: profile__frame profile__frame--3
+      class: profile profile--3
 - component: contact
