--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -11,7 +11,13 @@ components:
 - component: hero
   header: Hero Header
 - component: blocks
+  css_classes:
+    - blocks--pink
+    - blocks--reverse
 - component: workflow
+- component: blocks
+  css_classes: 
+    - blocks--orange
 - component: projects
   projects:
     - name: Project
@@ -26,6 +32,10 @@ components:
         url: https://via.placeholder.com/500x900
         alt: Project Image
       infoClass: project__info project__info--2
+- component: blocks
+  css_classes:
+    - blocks--yellow
+    - blocks--reverse
 - component: about
   title: About
   staff:
@@ -50,4 +60,7 @@ components:
         url: https://via.placeholder.com/350x600
         alt: Kaden Zipfel
       class: profile profile--3
+- component: blocks
+  css_classes:
+    - blocks--cyan
 - component: contact
