--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "babel-loader": "^8.0.4",
     "babili-webpack-plugin": "^0.1.2",
     "deep-extend": "^0.6.0",
+    "firebase-tools": "^6.7.0",
     "fs-readdir-recursive": "^1.1.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
