--- a/content/data/nav.yaml
+++ b/content/data/nav.yaml
@@ -1,6 +1,6 @@
 component: nav
 logo:
-  url: /static/images/logo.svg
+  url: /static/images/nerdwise-logo.svg
   alt: Logo
 links:
   - name: Workflow
