--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -46,6 +46,9 @@ components:
       the changes we're making as we make them.
     - Once we get to a point where you're happy to go live, we'll push the
       button and your site will be visible to the world.
+    - After the launch, if you'd like, you can monitor the performance of what
+      we've built with Google Analytics and adjust the site as needed to really
+      cater to your customers.
     - Our relationship doesn't have to end after the first launch either, we can
       continue to deliver post-launch pages and designs as well as setting you
       up with scheduled builds so that you can edit content in the CMS and see
