--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -11,6 +11,16 @@ components:
 - component: hero
   header: Hero Header
   wrap: False
+- component: why-us
+  header: Why Us?
+  tagline: Because we are really good at this.
+  button: Click Here
+  modal:
+    title: Questions you should ask your developer before you sign.
+    questions:
+    - Lorem ipsum dolor sit amet consectetur adipisicing elit?
+    - Lorem ipsum dolor sit amet consectetur adipisicing elit?
+    - Lorem ipsum dolor sit amet consectetur adipisicing elit?
 - component: workflow
   block_css_classes:
     - block--pink
