Widen borders and only around the outside

--- a/content/partials/coffeeForm.yaml
+++ b/content/partials/coffeeForm.yaml
@@ -4,21 +4,21 @@ items:
   fields:
   - field_type: TEXT
     name: entry.955900110
-    placeholder@: Name
+    placeholder@: Your answer
   label@: Name
   required: false
 - description: ''
   fields:
-  - field_type: EMAIL
+  - field_type: TEXT
     name: entry.1687256934
-    placeholder@: Email
+    placeholder@: Your answer
   label@: Email
   required: false
 - description: ''
   fields:
   - field_type: TEXTAREA
     name: entry.598564064
-    placeholder@: How do you like your coffee?
+    placeholder@: Your answer
   label@: Message
   required: false
 title@: Nerdwise Coffee Form
