--- a/content/partials/chatForm.yaml
+++ b/content/partials/chatForm.yaml
@@ -4,21 +4,21 @@ items:
   fields:
   - field_type: TEXT
     name: entry.617208522
-    placeholder@: Name
+    placeholder@: Your answer
   label@: Name
   required: false
 - description: ''
   fields:
-  - field_type: EMAIL
+  - field_type: TEXT
     name: entry.1213075532
-    placeholder@: Email
+    placeholder@: Your answer
   label@: Email
   required: false
 - description: ''
   fields:
   - field_type: TEXTAREA
     name: entry.1915984557
-    placeholder@: What's on your mind?
+    placeholder@: Your answer
   label@: Message
   required: false
 title@: Nerdwise Chat Form
