--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -33,7 +33,7 @@ components:
     - We take pride in creating valuable sites for our clients. You didn't set
       out to create a website for its own sake. Your site is a tool in your
       business's arsenal to help drive sales and build customer engagement. We
-      get that, we had the same motivations whfen we built this site :)
+      get that, we had the same motivations when we built this site :)
     - Any project we start will kick off with a meeting to discuss budgets,
       timelines, priorities and the desired final product.
     - We'll come back to you shortly thereafter with an actionable plan
