--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gulp-exec": "^3.0.2",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.1",
-    "toolbox-v2": "git+https://github.com/angusm/toolbox-v2.git#e443d0891199f19e27b32012d327de376e3e2d20",
+    "toolbox-v2": "git+https://github.com/kadenzipfel/toolbox-v2.git#e443d0891199f19e27b32012d327de376e3e2d20",
     "webpack": "4.20.2",
     "webpack-stream": "5.1.1"
   }
