Fix contentful image src paths

--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -67,18 +67,8 @@ components:
     - block--orange
     - block--2
   projects:
-    - name: Project
-      about: Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati laboriosam harum ipsum illum ratione amet! Maxime ipsum modi amet error.
-      image:
-        url: https://via.placeholder.com/500x900
-        alt: Project Image
-      infoClass: project__info project__info--1
-    - name: Project
-      about: Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati laboriosam harum ipsum illum ratione amet! Maxime ipsum modi amet error.
-      image:
-        url: https://via.placeholder.com/500x900
-        alt: Project Image
-      infoClass: project__info project__info--2
+    - !g.doc /content/project/2TGvuGBc0AOAV6oJnfsn2.yaml
+    - !g.doc /content/project/5Dc7L1BJRocnXwodze4LSf.yaml
 - component: about
   block_css_classes:
     - block--yellow
@@ -104,76 +94,3 @@ components:
       class: contact__topic contact__topic--2
     - name: Let's just chat
       class: contact__topic contact__topic--3
-  forms:
-    - field:
-        - element: input
-          id: name
-          label: Name
-          placeholder: Name
-          type: text
-          class: form__input
-        - element: input
-          id: company
-          label: Company
-          placeholder: Company
-          type: text
-          class: form__input
-        - element: input
-          id: email
-          label: Email
-          placeholder: Email
-          type: email
-          class: form__input
-        - element: input
-          id: budget
-          label: Budget
-          placeholder: Budget
-          type: text
-          class: form__input
-        - element: textarea
-          id: message
-          label: Message
-          placeholder: Tell us about your project...
-          type: text
-          class: form__textarea
-      class: contact__form contact__form--1
-    - field:
-        - element: input
-          id: name
-          label: Name
-          placeholder: Name
-          type: text
-          class: form__input
-        - element: input
-          id: email
-          label: Email
-          placeholder: Email
-          type: email
-          class: form__input
-        - element: textarea
-          id: message
-          label: Message
-          placeholder: How do you like your coffee?
-          type: text
-          class: form__textarea
-      class: contact__form contact__form--2
-    - field:
-        - element: input
-          id: name
-          label: Name
-          placeholder: Name
-          type: text
-          class: form__input
-        - element: input
-          id: email
-          label: Email
-          placeholder: Email
-          type: email
-          class: form__input
-        - element: textarea
-          id: message
-          label: Message
-          placeholder: So what do you want to talk about?
-          type: text
-          class: form__textarea
-      class: contact__form contact__form--3
