Change instance of css class keys to css_class

--- a/content/person/1Q0hdZPsPznSL7uzwYh2k3.yaml
+++ b/content/person/1Q0hdZPsPznSL7uzwYh2k3.yaml
@@ -1,5 +1,5 @@
 about: Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati laboriosam harum ipsum illum ratione amet! Maxime ipsum modi amet error.
-class: profile profile--3
+css_class: profile profile--3
 image:
   description: Kaden Zipfel
   file:
