--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -89,8 +89,8 @@ components:
   email: projects@nerdwise.ca
   topics:
     - name: Let's talk about a project
-      class: contact__topic contact__topic--1
+      css_class: contact__topic contact__topic--1
     - name: Let's meet for coffee
-      class: contact__topic contact__topic--2
+      css_class: contact__topic contact__topic--2
     - name: Let's just chat
-      class: contact__topic contact__topic--3
+      css_class: contact__topic contact__topic--3
