--- a/content/person/70Aua1MoBohsAYiMkfUWo8.yaml
+++ b/content/person/70Aua1MoBohsAYiMkfUWo8.yaml
@@ -1,5 +1,5 @@
 about: Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati laboriosam harum ipsum illum ratione amet! Maxime ipsum modi amet error.
-class: profile profile--2
+css_class: profile profile--2
 image:
   description: Jonathan Loubert
   file:
