--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -9,7 +9,6 @@ ng_controller: BaseController
 
 components:
 - component: hero
-  header: Hero Header
   wrap: False
 - !g.doc /content/why_us/1aT1loXqFSwybrwJ09FB34.yaml
 - component: workflow
@@ -74,9 +73,6 @@ components:
     - block--cyan
   email: projects@nerdwise.ca
   topics:
-    - name: Let's talk about a project
-      css_class: contact__topic contact__topic--1
-    - name: Let's meet for coffee
-      css_class: contact__topic contact__topic--2
-    - name: Let's just chat
-      css_class: contact__topic contact__topic--3
+    - !g.doc /content/topic/4gdtjJuf8xXOkS8rPgxcuK.yaml
+    - !g.doc /content/topic/1eA77p04SD1pUQAPM24rWk.yaml
+    - !g.doc /content/topic/5RG6x4vbzeUBqCnlxjRXXK.yaml
