--- a/content/data/footer.yaml
+++ b/content/data/footer.yaml
@@ -1,5 +1,5 @@
 component: footer
-logo: 
+logo:
   url: /static/images/nerdwise-logo.svg
   alt: Logo
 links:
@@ -11,4 +11,4 @@ links:
     url: /#workflow
   - name: Contact
     url: /#contact
-wrap: False
+wrap_with_skewed_section: False
