Disable colors on prod NOT the homepage.

--- a/content/pages/colors.yaml
+++ b/content/pages/colors.yaml
@@ -1,6 +1,9 @@
 $title: Colors
 $order: -1
 description: Color palette
+$path@env.prod: ~
+$localization@env.prod:
+  path: ~
 
 ng_controller: ColorController
 
