--- a/content/pages/home.yaml
+++ b/content/pages/home.yaml
@@ -14,21 +14,10 @@ components:
   block_css_classes:
     - block--pink
     - block--reverse
-  what_we_do:
-    - Deliver custom high-end bespoke websites.
-  how_we_do:
-    - A kick-off meeting will outline your goals, sort out budgets, timelines,
-      priorities and the desired final product. This is where we'll find out if
-      we're the right team for your needs.
-    - After coming back to you with an action plan, we'll set you up with tools
-      to set priorities, track progress, directly control the words and images
-      on your site and see live updates.
-    - Once you're happy we'll launch! And if you're into it, kick off planning
-      post-launch campaign updates and performance monitoring.
-    - Now all that's left is to give us a shout and kick this process off! :)
-  why_we_do:
-    - We're nerds. We love marrying beautiful designs with high performance
-      code.
+  sections: 
+    - !g.yaml /content/section/5i6XqTjqALZ5N1dVuewJ72.yaml
+    - !g.yaml /content/section/aGNHlyTzn1Il3cHG3glay.yaml
+    - !g.yaml /content/section/2J892UnNqDlWWOzmPjIAls.yaml
 - component: projects
   block_css_classes:
     - block--orange
